force-app/main/default/objects/Project_Level_Parameter__c/fields/Ground_SF__c.field-meta.xml
<CustomField>
    <fullName>Ground_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ground SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>