force-app/main/default/objects/Project_Level_Parameter__c/fields/HVAC_Air_Handling_Capacity__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Air_Handling_Capacity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>HVAC-Air Handling Capacity</description>
    <label>HVAC-Air Handling Capacity</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>