force-app/main/default/objects/Project_Level_Parameter__c/fields/HVAC_Air_Handling_Capacity_CFM__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Air_Handling_Capacity_CFM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HVAC Air Handling Capacity CFM</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>