force-app/main/default/objects/Project_Level_Parameter__c/fields/HVAC_Cooling_Load__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Cooling_Load__c</fullName>
    <defaultValue>0</defaultValue>
    <description>HVAC-Cooling Load</description>
    <label>HVAC-Cooling Load</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>