force-app/main/default/objects/Project_Level_Parameter__c/fields/HVAC_Cooling_Load_Tons__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Cooling_Load_Tons__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HVAC Cooling Load Tons</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>