force-app/main/default/objects/Project_Level_Parameter__c/fields/HVAC_Heating_Load__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Heating_Load__c</fullName>
    <defaultValue>0</defaultValue>
    <description>HVAC-Heating Load</description>
    <label>HVAC-Heating Load</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>