force-app/main/default/objects/Project_Level_Parameter__c/fields/HVAC_Heating_Load_Mbtu__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Heating_Load_Mbtu__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HVAC Heating Load Mbtu</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>