force-app/main/default/objects/Project_Level_Parameter__c/fields/Int_Const_Core_Shell_Partition_ratio__c.field-meta.xml
<CustomField>
    <fullName>Int_Const_Core_Shell_Partition_ratio__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Interior Construction Core/Shell Partition ratio</description>
    <label>Int Const Core/Shell Partition ratio</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>