force-app/main/default/objects/Project_Level_Parameter__c/fields/Interior_Override_Comments__c.field-meta.xml
<CustomField>
    <fullName>Interior_Override_Comments__c</fullName>
    <label>Interior Override Comments</label>
    <type>TextArea</type>
</CustomField>