force-app/main/default/objects/Project_Level_Parameter__c/fields/Level_of_Protection__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Protection__c</fullName>
    <description>Default Value comes from NCMT Project</description>
    <formula>TEXT(NCMT_Project__r.Level_of_Protection__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blast Resistance Level of Protection</label>
    <type>Text</type>
</CustomField>