force-app/main/default/objects/Project_Level_Parameter__c/fields/Lighting__c.field-meta.xml
<CustomField>
    <fullName>Lighting__c</fullName>
    <label>Lighting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outdated: T12, incandescent</fullName>
            </value>
            <value>
                <fullName>Current: T8 and T5</fullName>
            </value>
            <value>
                <fullName>Advanced: LED or similar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>