force-app/main/default/objects/Project_Level_Parameter__c/fields/Live_Load__c.field-meta.xml
<CustomField>
    <fullName>Live_Load__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Live Load</description>
    <label>Live Load</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>