force-app/main/default/objects/Project_Level_Parameter__c/fields/Massing_Override_Comments__c.field-meta.xml
<CustomField>
    <fullName>Massing_Override_Comments__c</fullName>
    <label>Massing Override Comments</label>
    <type>TextArea</type>
</CustomField>