force-app/main/default/objects/Project_Level_Parameter__c/fields/MEP_Override_Comments__c.field-meta.xml
<CustomField>
    <fullName>MEP_Override_Comments__c</fullName>
    <label>MEP Override Comments</label>
    <type>TextArea</type>
</CustomField>