force-app/main/default/objects/Project_Level_Parameter__c/fields/NCMT_Project__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project__c</fullName>
    <description>NCMT Project</description>
    <label>NCMT Project</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipLabel>Project Level Parameters</relationshipLabel>
    <relationshipName>Project_Level_Parameters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>