force-app/main/default/objects/Project_Level_Parameter__c/fields/Number_of_Elevators__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Elevators__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Elevators</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>