force-app/main/default/objects/Project_Level_Parameter__c/fields/Number_of_Stops__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Stops__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Vertical Conveyance Elevators Stops</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>