force-app/main/default/objects/Project_Level_Parameter__c/fields/Other_Special_Condition_Specify__c.field-meta.xml
<CustomField>
    <fullName>Other_Special_Condition_Specify__c</fullName>
    <description>Other Special Condition: Specify</description>
    <inlineHelpText>Address site specific conditions that are rarely considered the norm of concepts estimating building models. Typical conditions anticipated for this are 1) Construction on a steep slope, 2) Rock Excavation and Removal, 3) inclement weather, etc.</inlineHelpText>
    <label>Other Special Condition: Specify</label>
    <length>100</length>
    <type>Text</type>
</CustomField>