force-app/main/default/objects/Project_Level_Parameter__c/fields/Over_percentage_of_Perimeter__c.field-meta.xml
<CustomField>
    <fullName>Over_percentage_of_Perimeter__c</fullName>
    <defaultValue>1.00</defaultValue>
    <description>Over percentage of Perimeter</description>
    <label>Use Over percentage of Perimeter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>