force-app/main/default/objects/Project_Level_Parameter__c/fields/Overall__c.field-meta.xml
<CustomField>
    <fullName>Overall__c</fullName>
    <label>Overall site character</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Urban streetscape</fullName>
            </value>
            <value>
                <fullName>Urban with setbacks: plaza and landscape</fullName>
            </value>
            <value>
                <fullName>Suburban: landscape, parking, plaza</fullName>
            </value>
            <value>
                <fullName>Campus setting</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>