force-app/main/default/objects/Project_Level_Parameter__c/fields/Overall_Condition_Cladding__c.field-meta.xml
<CustomField>
    <fullName>Overall_Condition_Cladding__c</fullName>
    <label>Overall Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Very Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>