force-app/main/default/objects/Project_Level_Parameter__c/fields/Override_Glazing_Ratio_SF__c.field-meta.xml
<CustomField>
    <fullName>Override_Glazing_Ratio_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Override Glazing Ratio SF</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>