force-app/main/default/objects/Project_Level_Parameter__c/fields/Override_Plumbing_Fixtures_EA__c.field-meta.xml
<CustomField>
    <fullName>Override_Plumbing_Fixtures_EA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Override Plumbing Fixtures EA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>