force-app/main/default/objects/Project_Level_Parameter__c/fields/Panelboards__c.field-meta.xml
<CustomField>
    <fullName>Panelboards__c</fullName>
    <formula>(MAX((( Above_Ground__c +  Below_Ground__c )*2), MCEILING( NCMT_Project__r.Total_GSF__c/15000) )) +  (MAX((( Above_Ground__c +  Below_Ground__c )+1), MCEILING( NCMT_Project__r.Total_GSF__c/25000) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Panelboards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>