force-app/main/default/objects/Project_Level_Parameter__c/fields/ParaSiteAdj__c.field-meta.xml
<CustomField>
    <fullName>ParaSiteAdj__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ParaSiteAdj</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>