force-app/main/default/objects/Project_Level_Parameter__c/fields/Penthouse__c.field-meta.xml
<CustomField>
    <fullName>Penthouse__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Penthouse</description>
    <label>Penthouse</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>