force-app/main/default/objects/Project_Level_Parameter__c/fields/PGFloors__c.field-meta.xml
<CustomField>
    <fullName>PGFloors__c</fullName>
    <formula>(NCMT_Project__r.Parking_Garage_Gross_Area_SF__c )/( NCMT_Project__r.At_and_above_grade__c + NCMT_Project__r.Below_grade__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PGFloors</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>