force-app/main/default/objects/Project_Level_Parameter__c/fields/Plumbing_Fixtures__c.field-meta.xml
<CustomField>
    <fullName>Plumbing_Fixtures__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Plumbing Fixtures</description>
    <label>Plumbing Fixtures</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>