force-app/main/default/objects/Project_Level_Parameter__c/fields/Plumbing_Fixtures_EA__c.field-meta.xml
<CustomField>
    <fullName>Plumbing_Fixtures_EA__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Plumbing Fixtures EA</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>