force-app/main/default/objects/Project_Level_Parameter__c/fields/Primary_Roof_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Roof_Type__c</fullName>
    <label>Primary Roof Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Mansard</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Sloped, Metal</fullName>
            </value>
            <value>
                <fullName>Sloped, Tile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>