force-app/main/default/objects/Project_Level_Parameter__c/fields/Primary_System__c.field-meta.xml
<CustomField>
    <fullName>Primary_System__c</fullName>
    <label>Primary System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central Plant</fullName>
            </value>
            <value>
                <fullName>Chillers, cooling towers and boilers</fullName>
            </value>
            <value>
                <fullName>Air cooled chillers and boilers</fullName>
            </value>
            <value>
                <fullName>Packaged/DX systems</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>