force-app/main/default/objects/Project_Level_Parameter__c/fields/RA_Elec_Mod__c.field-meta.xml
<CustomField>
    <fullName>RA_Elec_Mod__c</fullName>
    <defaultValue>1</defaultValue>
    <label>RA Elec Mod</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>