force-app/main/default/objects/Project_Level_Parameter__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <formula>NCMT_Project__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordType</label>
    <type>Text</type>
</CustomField>