force-app/main/default/objects/Project_Level_Parameter__c/fields/Roof_System_Override_Comments__c.field-meta.xml
<CustomField>
    <fullName>Roof_System_Override_Comments__c</fullName>
    <label>Roof System Override Comments</label>
    <type>TextArea</type>
</CustomField>