force-app/main/default/objects/Project_Level_Parameter__c/fields/Roofing_Green_Roof_PS__c.field-meta.xml
<CustomField>
    <fullName>Roofing_Green_Roof_PS__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Roofing Green Roof</description>
    <label>Roofing-Green Roof PS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>