force-app/main/default/objects/Project_Level_Parameter__c/fields/Roofing_Override_Comments__c.field-meta.xml
<CustomField>
    <fullName>Roofing_Override_Comments__c</fullName>
    <label>Roofing Override Comments</label>
    <type>TextArea</type>
</CustomField>