force-app/main/default/objects/Project_Level_Parameter__c/fields/Roofing_Skylights_SF__c.field-meta.xml
<CustomField>
    <fullName>Roofing_Skylights_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Roofing Skylights SF</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>