force-app/main/default/objects/Project_Level_Parameter__c/fields/Site_Access__c.field-meta.xml
<CustomField>
    <fullName>Site_Access__c</fullName>
    <description>Site Access</description>
    <inlineHelpText>Addresses whether construction is required on a compact, congested site, with area, or whether you anticipate having plenty of site area for holding stored materials, cranes, lifts, etc. on the site.</inlineHelpText>
    <label>Site Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highly Congested</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>