force-app/main/default/objects/Project_Level_Parameter__c/fields/Site_Access_Cost_Impact__c.field-meta.xml
<CustomField>
    <fullName>Site_Access_Cost_Impact__c</fullName>
    <formula>IF(Text(Site_Access__c) == &apos;Highly Congested&apos;, 0.04,IF(Text(Site_Access__c) == &apos;Limited&apos;, 0.01,
IF(Text(Site_Access__c) == &apos;Fair&apos;, 0,IF(Text(Site_Access__c) == &apos;Good&apos;, -0.02,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Access Cost Impact Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>