force-app/main/default/objects/Project_Level_Parameter__c/fields/Site_Remoteness__c.field-meta.xml
<CustomField>
    <fullName>Site_Remoteness__c</fullName>
    <description>Formula from NCMT Project</description>
    <formula>Text(NCMT_Project__r.Remoteness__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Remoteness</label>
    <type>Text</type>
</CustomField>