force-app/main/default/objects/Project_Level_Parameter__c/fields/SiteRemoteness_Cost_Impact__c.field-meta.xml
<CustomField>
    <fullName>SiteRemoteness_Cost_Impact__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SiteRemoteness Cost Impact Percent</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>