force-app/main/default/objects/Project_Level_Parameter__c/fields/Skin_System_Override_Comments__c.field-meta.xml
<CustomField>
    <fullName>Skin_System_Override_Comments__c</fullName>
    <label>Skin System Override Comments</label>
    <type>TextArea</type>
</CustomField>