force-app/main/default/objects/Project_Level_Parameter__c/fields/Sloped_Roof_BG__c.field-meta.xml
<CustomField>
    <fullName>Sloped_Roof_BG__c</fullName>
    <label>Sloped Roof</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>